--- a/backend/StrategyGame.Api/appsettings.json
+++ b/backend/StrategyGame.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "underseaGame": "server=(localdb)\\MSSQLLocalDB;Initial Catalog=underseaGame;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
