--- a/backend/StrategyGame.Bll/StrategyGame.Bll.csproj
+++ b/backend/StrategyGame.Bll/StrategyGame.Bll.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
