--- a/backend/StrategyGame.Model/StrategyGame.Model.csproj
+++ b/backend/StrategyGame.Model/StrategyGame.Model.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
