--- a/backend/StrategyGame.Api/StrategyGame.Api.csproj
+++ b/backend/StrategyGame.Api/StrategyGame.Api.csproj
@@ -11,10 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\StrategyGame.Bll\StrategyGame.Bll.csproj" />
     <ProjectReference Include="..\StrategyGame.Dal\StrategyGame.Dal.csproj" />
   </ItemGroup>
 
