--- a/backend/StrategyGame.Api/StrategyGame.Api.csproj
+++ b/backend/StrategyGame.Api/StrategyGame.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -7,14 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\StrategyGame.Bll\StrategyGame.Bll.csproj" />
     <ProjectReference Include="..\StrategyGame.Dal\StrategyGame.Dal.csproj" />
   </ItemGroup>
 
