--- a/backend/StrategyGame.Bll/StrategyGame.Bll.csproj
+++ b/backend/StrategyGame.Bll/StrategyGame.Bll.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <ProjectReference Include="..\StrategyGame.Dal\StrategyGame.Dal.csproj" />
+    <ProjectReference Include="..\StrategyGame.Model\StrategyGame.Model.csproj" />
   </ItemGroup>
 
 </Project>
