--- a/backend/StrategyGame.Model/StrategyGame.Model.csproj
+++ b/backend/StrategyGame.Model/StrategyGame.Model.csproj
@@ -5,13 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="DataManager\" />
-    <Folder Include="DTOs\" />
   </ItemGroup>
 
 </Project>
