--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
-    "@angular/cdk": "^9.1.3",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@auth0/angular-jwt": "^4.0.0",
     "ngx-cookie-service": "^3.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
